finish bid endpoints and test
clean up test code as well.
