# api/api-spec.yaml
@@ -2,8 +2,6 @@ openapi: 3.0.0
 servers:
   - description: Local Host
     url: http://localhost:8000
-  - description: SwaggerHub API Auto Mocking
-    url: https://virtserver.swaggerhub.com/thomasyuan/TradeRev/1.0
 
 info:
   version: "1.0.0"
@@ -389,8 +387,8 @@ components:
           - id
           - vehicle_id
           - vehicle_name
-          - bid_time
-          - bid_price
+          - time
+          - price
         properties:
           id:
             type: number
@@ -401,10 +399,10 @@ components:
           vehicle_name:
             type: string
             example: "Civic"
-          bid_time:
+          time:
             type: string
             example: "2012-08-19 14:03:32"
-          bid_price:
+          price:
             type: number
             example: 120000
 
@@ -419,8 +417,8 @@ components:
         - id
         - account_id
         - account_name
-        - bid_time
-        - bid_price
+        - time
+        - price
       properties:
         id:
           type: number
@@ -431,10 +429,10 @@ components:
         account_name:
           type: string
           example: "John Smith"
-        bid_time:
+        time:
           type: string
           example: "2012-08-19 14:03:32"
-        bid_price:
+        price:
           type: number
           example: 120000
 
